tests/NormalTests/paczka1/fuzzy1/40047042.err
Error in line 8: FIQChI9my4 S57 16,2
Error in line 12: AlYcgpXZ S242 100,1
Error in line 25: AlYcgpXZ§A311§95,7
Error in line 30: Bp8 S810 74,6
